# Self-calibration-using-Homography-Constraints

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/planecalib/: BaseRansac.h  BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  CalibratedBundleAdjuster.cpp  CameraDistortionModel.h  CameraModel.h  CameraModelCeres.h  CeresParametrization.cpp  FeatureMatcher.cpp  FeatureMatcher.h  HomographyCalibration.cpp  HomographyCalibration.h  HomographyEstimation.cpp  HomographyEstimation.h  ImagePyramid.cpp  ImagePyramid.h  Keyframe.cpp  Keyframe.h  Map.h  PlaneCalibSystem.cpp  PlaneCalibSystem.h  PnpEstimation.cpp  PnpEstimation.h  PoseEstimationCommon.h  PoseTracker.cpp  PoseTracker.h  Profiler.cpp  Profiler.h  cvutils.cpp  cvutils.h  eutils.h  flags.h  log.h  shared_mutex.h  stdutils.h
code/planecalib_desktop/: CMakeLists.txt  main.cpp
code/planecalib_ui/: Application.h  CMakeLists.txt  ImageDataSource.cpp  OpenCVDataSource.cpp  OpenCVDataSource.h  PlaneCalibApp.cpp  SequenceDataSource.cpp  SequenceDataSource.h  TextureHelper.cpp  TextureHelper.h  UserInterfaceInfo.cpp  UserInterfaceInfo.h  ViewportTiler.cpp  flags.h
code/planecalib_ui/tests/: SceneGenerator.cpp
code/planecalib_ui/windows/: TestWindow.cpp
